Back fill missing required failure reason field (#12307)